# cpsc_330_hws

./: README.md  pyproject.toml
hw1/: hw1.ipynb  hw1_sol.ipynb
hw2/: hw2.ipynb
hw3/: hw3.ipynb  hw3_sol.ipynb  income_prediction.ipynb
hw4/: donald_trump_tweets.ipynb  hw4.ipynb  hw4_sol.ipynb
