[tool.poetry]
name = "hws"
version = "0.1.0"
description = ""
authors = ["Eros Rodriguez <eros_rodriguez@selinc.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
